--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Dinesh Pandiyan | Awesome Dev</title>
+	<title>Aquabyte</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -24,11 +24,11 @@
 	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
 </head>
 <body>
-	<main>
-		<div class="intro">Hello, I'm Dinesh!</div>
+	<!-- <main>
+		<div class="intro">Aquabyte</div>
 		<div class="tagline">All-Star Dev | Code Fanatic | Linux Hacker | Bleh</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
-		<div class="icons-social">
+		 <!--<div class="icons-social">
 			<a target="_blank" href="https://github.com/flexdinesh"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com/flexdinesh"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://dev.to/flexdinesh"><i class="fab fa-dev"></i></a>
@@ -39,6 +39,6 @@
 			<a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a>
 			<a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a>
     </div>
-	</main>
+	</main> -->
 </body>
 </html>
