--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
 </head>
 <body>
-	<!-- <main>
+	<main>
 		<div class="intro">Aquabyte</div>
 		<div class="tagline">All-Star Dev | Code Fanatic | Linux Hacker | Bleh</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
-		 <!--<div class="icons-social">
+		 <!-- <<div class="icons-social">
 			<a target="_blank" href="https://github.com/flexdinesh"><i class="fab fa-github"></i></a>
 			<a target="_blank" href="https://twitter.com/flexdinesh"><i class="fab fa-twitter"></i></a>
 			<a target="_blank" href="https://dev.to/flexdinesh"><i class="fab fa-dev"></i></a>
@@ -37,8 +37,8 @@
 			<a target="_blank" href="https://medium.com/@flexdinesh"><i class="fab fa-medium"></i></a>
 			<a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a>
 			<a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a>
-			<a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a>
+			<a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a> -->
     </div>
-	</main> -->
+	</main>
 </body>
 </html>
